--- a/website/index.html
+++ b/website/index.html
@@ -12,7 +12,7 @@
         <div class="menu">
             <ul>
                 <li><a href="1.html" target="menuIframe">Home</a></li>
-                <li><a href="2.html" target="menuIframe">About Us</a></li>
+                <li><a href="about_us.html" target="menuIframe">About Us</a></li>
                 <li><a href="3.html" target="menuIframe">How we are</a></li>
                 <li><a href="4.html" target="menuIframe">Contact</a></li>
             </ul>
