--- a/website/index.html
+++ b/website/index.html
@@ -11,10 +11,10 @@
     <body>
         <div class="menu">
             <ul>
-                <li><a href="1.html" target="menuIframe">Home</a></li>
+                <li><a href="home.html" target="menuIframe">Home</a></li>
                 <li><a href="about_us.html" target="menuIframe">About Us</a></li>
-                <li><a href="3.html" target="menuIframe">How we are</a></li>
-                <li><a href="4.html" target="menuIframe">Contact</a></li>
+                <li><a href="who_we_are.html" target="menuIframe">Who we are</a></li>
+                <li><a href="contact.html" target="menuIframe">Contact</a></li>
             </ul>
         </div>
 
