--- a/website/index.html
+++ b/website/index.html
@@ -12,9 +12,9 @@
         <div class="menu">
             <ul>
                 <li><a href="home.html" target="menuIframe">Home</a></li>
+                <li><a href="package.html" target="menuIframe">Packages</a></li>
                 <li><a href="about_us.html" target="menuIframe">About Us</a></li>
-                <li><a href="who_we_are.html" target="menuIframe">Who we are</a></li>
-                <li><a href="contact.html" target="menuIframe">Contact</a></li>
+                <li><a href="contact.html" target="menuIframe">Contact Us</a></li>
             </ul>
         </div>
 
