--- a/website/home.html
+++ b/website/home.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,15 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Country Traditions</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/carousel.css">
 </head>
 <body>
+    <div class="menu-wrapper">
+        <div class="menu">
+            <!-- Your menu here -->
+        </div>
+    </div>
 
-<div class="container">
-    <h1></h1>
-    
-   
+    <div class="carousel-container">
+        <div class="carousel-slide">
+            <img src="img/1.jpeg" alt="Image 1" id="lastClone">
+            <img src="img/2.jpeg" alt="Image 2">
+            <img src="img/3.jpeg" alt="Image 3">
+            <img src="img/4.jpeg" alt="Image 4" id="firstClone">
+        </div>
+    </div>
 
-</div>
-
+    <script src="js/carousel.js"></script>
 </body>
 </html>
