--- a/website/index.html
+++ b/website/index.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/main.css">
-        </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="css/main.css">
     <title>Main Page</title>
-
-    <body>
+</head>
+<body>
+    
+    <div class="wrapper">
         <div class="menu">
-            <ul>
-                <li><a href="home.html" target="menuIframe">Home</a></li>
-                <li><a href="package.html" target="menuIframe">Packages</a></li>
-                <li><a href="about_us.html" target="menuIframe">About Us</a></li>
-                <li><a href="contact.html" target="menuIframe">Contact Us</a></li>
+            <ul class="menu-list">
+                <li class="menu-item"><a href="home.html" target="menuIframe" class="menu-link">Home</a></li>
+                <li class="menu-item"><a href="package.html" target="menuIframe" class="menu-link">Packages</a></li>
+                <li class="menu-item"><a href="about_us.html" target="menuIframe" class="menu-link">About Us</a></li>
+                <li class="menu-item"><a href="contact.html" target="menuIframe" class="menu-link">Contact Us</a></li>
             </ul>
         </div>
-
-        <iframe name="menuIframe" width="100%" height="800px" src="1.html"></iframe>
-    </body>
+        <iframe name="menuIframe" width="100%" height="800px" src="home.html"></iframe>
+    </div>
+</body>
 </html>
