--- a/website/home.html
+++ b/website/home.html
@@ -8,13 +8,11 @@
     <link rel="stylesheet" href="css/carousel.css">
 </head>
 <body>
-    <div class="menu-wrapper">
-        <div class="menu">
-            <!-- Your menu here -->
-        </div>
-    </div>
-
     <div class="carousel-container">
+        <div class="carousel-overlay">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>Integer id convallis justo, nec tempus velit. <br>
+                Pellentesque in magna nisl. <br>Nunc convallis turpis elit, nec viverra odio placerat vitae.</p>
+        </div>
         <div class="carousel-slide">
             <img src="img/1.jpeg" alt="Image 1" id="lastClone">
             <img src="img/2.jpeg" alt="Image 2">
@@ -22,6 +20,7 @@
             <img src="img/4.jpeg" alt="Image 4" id="firstClone">
         </div>
     </div>
+    
 
     <script src="js/carousel.js"></script>
 </body>
