--- a/website/home.html
+++ b/website/home.html
@@ -19,6 +19,10 @@
             <img src="img/3.jpeg" alt="Image 3">
             <img src="img/4.jpeg" alt="Image 4" id="firstClone">
         </div>
+        <p>Gostoso Brasil is a travel agency with a decade of experience in the Brazilian tourism market. 
+           Our agency is proud to have a dedicated team of over 20 employees, and we have successfully 
+           positioned ourselves as the top choice for planning the perfect vacation in Brazil, offering 
+           top-notch service and competitive prices. Join us in exploring the world together.</p>
     </div>
     
 
