--- a/website/about_us.html
+++ b/website/about_us.html
@@ -10,9 +10,13 @@
 <body>
 
 <div class="container">
-    <h1>" We are three partnes with vaste experience in the BRasilian destination</h1>
-    
-   
+    <h1> What we do:</h1>
+
+        <p>Gostoso Brasil is a travel agency with a decade of experience in the Brazilian tourism market. 
+            Our agency is proud to have a dedicated team of over 20 employees, and we have successfully 
+            positioned ourselves as the top choice for planning the perfect vacation in Brazil, offering 
+            top-notch service and competitive prices. Join us in exploring the world together.</p>>
+      
 
 </div>
 
