--- a/website/home.html
+++ b/website/home.html
@@ -17,7 +17,9 @@
             <img src="img/1.jpeg" alt="Image 1" id="lastClone">
             <img src="img/2.jpeg" alt="Image 2">
             <img src="img/3.jpeg" alt="Image 3">
-            <img src="img/4.jpeg" alt="Image 4" id="firstClone">
+            <img src="img/4.jpeg" alt="Image 4" >
+            <img src="img/5.jpeg" alt="Image 5" >
+            <img src="img/6.jpeg" alt="Image 6" id="firstClone">
         </div>
         <p>Gostoso Brasil is a travel agency with a decade of experience in the Brazilian tourism market. 
            Our agency is proud to have a dedicated team of over 20 employees, and we have successfully 
