add contact page

--- a/website/contact.html
+++ b/website/contact.html
@@ -10,9 +10,39 @@
 <body>
 
 <div class="container">
-    <h1></h1>
+    <h1>Please reach out to us!</h1>
     
-   
+   <form>
+    <table>
+        <tr>
+            <td>Name:</td>
+            <td><input type="text"></td>
+        </tr>
+        <tr>
+            <td>Email:</td>
+            <td><input type="text"></td>
+        </tr>
+        <tr>
+            <td>Phone:</td>
+            <td><input type="text"></td>
+        </tr>
+        <tr>
+            <td>Subject:</td>
+            <td><input type="text"></td>
+        </tr>
+        <tr>
+            <td>Message:</td>
+            <td><textarea></textarea></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td><button>Send</button></td>
+        </tr>
+
+    </table>
+    
+
+   </form>
 
 </div>
 
