--- a/website/index.html
+++ b/website/index.html
@@ -20,5 +20,6 @@
         </div>
         <iframe name="menuIframe" width="100%" height="800px" src="home.html"></iframe>
     </div>
+    <footer>asadasdasiduasidaslidjaslkdj</footer>
 </body>
 </html>
