I added a footer with the copyright info

--- a/website/index.html
+++ b/website/index.html
@@ -20,6 +20,8 @@
         </div>
         <iframe name="menuIframe" width="100%" height="800px" src="home.html"></iframe>
     </div>
-    <footer>asadasdasiduasidaslidjaslkdj</footer>
+    <footer>Image Copyright: Images on this website are sourced from <br>
+            Pixabay and are licensed under a Pixabay License.<br>
+            https://pixabay.com/photos/arraial-do-cabo-brazil-beach-rio-7423611/</footer>
 </body>
 </html>
