--- a/website/home.html
+++ b/website/home.html
@@ -10,6 +10,7 @@
 <body>
     <div class="carousel-container">
         <div class="carousel-overlay">
+            <img src="img/Frame-4.png" alt="Logo" class="carousel-logo">
         <p>Gostoso Brasil is a travel agency with a decade of experience in the Brazilian tourism market. 
            Our agency is proud to have a dedicated team of over 20 employees, and we have successfully 
            positioned ourselves as the top choice for planning the perfect vacation in Brazil, offering 
