--- a/website/index.html
+++ b/website/index.html
@@ -20,8 +20,12 @@
         </div>
         <iframe name="menuIframe" width="100%" height="800px" src="home.html"></iframe>
     </div>
-    <footer>Image Copyright: Images on this website are sourced from <br>
+    <footer>
+        <footer style="text-align: center; font-size: 16px; border-top: 1px solid #ccc; color: #666;">
+            &copy; 2023 Country Traditions
+            <a href="privacy-policy.html">Privacy Policy</a>
+            Image Copyright: Images on this website are sourced from <br>
             Pixabay and are licensed under a Pixabay License.<br>
-            https://pixabay.com/photos/arraial-do-cabo-brazil-beach-rio-7423611/</footer>
+            </footer>
 </body>
 </html>
