--- a/website/index.html
+++ b/website/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="css/main.css">
-    <title>Main Page</title>
+    <title>Costa Brazil</title>
 </head>
 <body>
     
@@ -19,13 +19,13 @@
             </ul>
         </div>
         <iframe name="menuIframe" width="100%" height="800px" src="home.html"></iframe>
-    </div>
-    <footer>
         <footer style="text-align: center; font-size: 16px; border-top: 1px solid #ccc; color: #666;">
             &copy; 2023 Country Traditions
             <a href="privacy-policy.html">Privacy Policy</a>
             Image Copyright: Images on this website are sourced from <br>
             Pixabay and are licensed under a Pixabay License.<br>
-            </footer>
+        </footer>
+    </div>
+      
 </body>
 </html>
