--- a/website/about_us.html
+++ b/website/about_us.html
@@ -18,7 +18,7 @@
         
           <div class="person">
             <img src="img/mau.png" alt="Cesar Rodriguez" width="300">
-            <p>Cesar Rodriguez</b><br/>Product Designer Hailing from the enchanting city of Cuzco, Peru, one of the most sought-after destinations in Latin America. Cesar is our product designer. He specializes in creating tailor-made experiences for couples and families, ensuring that every trip is a unique and memorable adventure.</p>
+            <p><b>Cesar Rodriguez</b><br/>Product Designer Hailing from the enchanting city of Cuzco, Peru, one of the most sought-after destinations in Latin America. Cesar is our product designer. He specializes in creating tailor-made experiences for couples and families, ensuring that every trip is a unique and memorable adventure.</p>
           </div>
         
           <div class="person">
