--- a/website/home.html
+++ b/website/home.html
@@ -11,7 +11,7 @@
     <div class="carousel-container">
         <div class="carousel-overlay">
             <img src="img/Frame-4.png" alt="Logo" class="carousel-logo">
-        <p>Gostoso Brasil is a travel agency with a decade of experience in the Brazilian tourism market. 
+        <p>Costa Brasil is a travel agency with a decade of experience in the Brazilian tourism market. 
            Our agency is proud to have a dedicated team of over 20 employees, and we have successfully 
            positioned ourselves as the top choice for planning the perfect vacation in Brazil, offering 
            top-notch service and competitive prices. Join us in exploring the world together.</p>
