--- a/website/package.html
+++ b/website/package.html
@@ -26,7 +26,7 @@
               <li>Visit to Itaipu Dam</li>
               <li>Bird Park and Wildlife Experience</li>
             </ul>
-            <a href="iguazu-falls-package.html" class="package-button">Learn More</a>
+            <a href="#" class="package-button">Learn More</a>
           </div>
         </div>
       
@@ -43,7 +43,7 @@
               <li>Guided city tour of Rio de Janeiro</li>
               <li>Samba Parade of the Special Group</li>
             </ul>
-            <a href="rio-de-janeiro-carnival-package.html" class="package-button">Learn More</a>
+            <a href="#" class="package-button">Learn More</a>
           </div>
         </div>
       </div>
