--- a/website/index.html
+++ b/website/index.html
@@ -22,8 +22,8 @@
         <footer style="text-align: center; font-size: 16px; border-top: 1px solid #ccc; color: #666;">
             &copy; 2023 Country Traditions
             <a href="privacy-policy.html">Privacy Policy</a>
-            Image Copyright: Images on this website are sourced from <br>
-            Pixabay and are licensed under a Pixabay License.<br>
+            Image Copyright: Images on this website are sourced from Costa Brazil and   <br>
+            Pixabay.<br>
         </footer>
     </div>
       
