--- a/website/index.html
+++ b/website/index.html
@@ -20,7 +20,7 @@
         </div>
         <iframe name="menuIframe" width="100%" height="800px" src="home.html"></iframe>
         <footer style="text-align: center; font-size: 16px; border-top: 1px solid #ccc; color: #666;">
-            &copy; 2023 Country Traditions
+            &copy; 2023 Costa Brazil
             <a href="privacy-policy.html">Privacy Policy</a>
             Image Copyright: Images on this website are sourced from Costa Brazil and   <br>
             Pixabay.<br>
